package com.reservation.classes;

public class Application {

    public void createCinema(){

    }

    public void fillInfoCinema(){

    }

    public void saveCinema(){

    }

    public void createFilm(){

    }

    public void fillInfoFilm(){

    }

    public void saveFilm(){

    }

    public void createSeance(){

    }

    public void fillInfoSeance(){

    }

    public void saveSeance(){

    }

    public void getListFilm(){

    }

    public void getInfoFilm(){

    }

    public void getListSeance(){

    }

    public void getInfoSeance(){

    }

    public void getInfoSeat(){

    }

    public void createReservation(){

    }

    public void getListReservedTicket(){

    }

    public void deleteListReservedTicket(){

    }

    public void getInfoViewer(){

    }

    public void updateInfoViewer(){

    }

    public void saveInfoViewer(){

    }


}
