package com.reservation.classes;

public class Cinema {

    private int idCinema;
    private String name;
    private String address;

    public Cinema(){

    }

    public void createSeance(){

    }

    public void readSeance(){

    }

    public void updateSeance(){

    }

    public void deleteSeance(){

    }

    public void setIdCinema(int idCinema) {
        this.idCinema = idCinema;
    }

    public void setName(String name) {
        this.name = name;
    }

    public void setAddress(String address) {
        this.address = address;
    }

    public int getIdCinema() {
        return idCinema;
    }

    public String getName() {
        return name;
    }

    public String getAddress() {
        return address;
    }

}