package com.reservation.classes;

public class ReservedTicket {

    private int code;
    private int value;

    public ReservedTicket(){

    }

    public void inputOrderData(){

    }

    public void setCode(int code) {
        this.code = code;
    }

    public void setValue(int value) {
        this.value = value;
    }

    public int getCode() {
        return code;
    }

    public int getValue() {
        return value;
    }
}
