package com.reservation.classes;

public class Seat {

    private byte row;
    private byte place;

    public Seat(){

    }

    public void numberReservedSeats(){

    }

    public void setRow(byte row) {
        this.row = row;
    }

    public void setPlace(byte place) {
        this.place = place;
    }

    public byte getRow() {
        return row;
    }

    public byte getPlace() {
        return place;
    }
}
