@startuml
skinparam classAttributeIconSize 0

class NesterovichAleksandr.OnlineReservedTickets.service.Application{

+createCinema()
+fillInfoCinema()
+saveCinema()
+createFilm()
+fillInfoFilm()
+saveFilm()
+createSeance()
+fillInfoSeance()
+saveSeance()
+getListFilm()
+getInfoFilm()
+getListSeance()
+getInfoSeance()
+getInfoSeat()
+createReservation()
+getListReservedTicket()
+deleteReservedTicket()
+getInfoViewer()
+updateInfoViewer()
+saveInfoViewer()
}

class NesterovichAleksandr.OnlineReservedTickets.service.Film{
-country : String
-duration :short
-genre : String
-name : String
-yearOfIssue : short
}

class NesterovichAleksandr.OnlineReservedTickets.service.Seance{
-date
-time
+readSeat()
}

class NesterovichAleksandr.OnlineReservedTickets.service.Cinema{
-name : String
-address : String
+createSeance()
+readSeance()
+updateSeance()
+deleteSeance()
}

class NesterovichAleksandr.OnlineReservedTickets.service.Seat{
-row : byte
-place : byte
+numberReservedSeats()
}

class NesterovichAleksandr.OnlineReservedTickets.service.ReservedTicket{
-code : int
-value : int
+inputOrderData()
}

class NesterovichAleksandr.OnlineReservedTickets.service.IndividualCabinet{
-firstName : String
-lastName : String
-phoneNumber: long
+createReservedTicket()
+readReservedTicket()
+deleteReservedTicket()
}

NesterovichAleksandr.OnlineReservedTickets.service.Application "1" -- "0..*" NesterovichAleksandr.OnlineReservedTickets.service.Film
NesterovichAleksandr.OnlineReservedTickets.service.Application "1" -- "0..*" NesterovichAleksandr.OnlineReservedTickets.service.Cinema
NesterovichAleksandr.OnlineReservedTickets.service.Film "1" -- "0..*" NesterovichAleksandr.OnlineReservedTickets.service.Seance
NesterovichAleksandr.OnlineReservedTickets.service.Seance "1" -- "0..*" NesterovichAleksandr.OnlineReservedTickets.service.ReservedTicket
NesterovichAleksandr.OnlineReservedTickets.service.ReservedTicket "0..*" -- "1" NesterovichAleksandr.OnlineReservedTickets.service.Seat
NesterovichAleksandr.OnlineReservedTickets.service.Cinema "1" -- "1..*" NesterovichAleksandr.OnlineReservedTickets.service.Seat
NesterovichAleksandr.OnlineReservedTickets.service.Cinema "1" *--  "0..*" NesterovichAleksandr.OnlineReservedTickets.service.Seance
NesterovichAleksandr.OnlineReservedTickets.service.IndividualCabinet "1" *-- "0..*" NesterovichAleksandr.OnlineReservedTickets.service.ReservedTicket

@enduml